force-app/main/default/objects/nFORCE__Answer__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It automatically populates. It relates an answer to a relationship/account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>