force-app/main/default/objects/nFORCE__Answer__c/fields/LLC_BI__Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is manually populated. This field specifies the deposit that these answers are associated with.</description>
    <label>Deposit</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>