force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Currency_Answer__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Currency_Answer__c</fullName>
    <description>Users populate this optional currency field for Questionnaire questions that need a currency value as the answer. By default, it is blank.</description>
    <inlineHelpText>Enter the currency value for this configurable questionnaire field.</inlineHelpText>
    <label>Currency Answer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>