force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually set. When enabled, it archives an answer so it is no longer available to a user. When disabled, the answer is available to a user to select. By default, it is disabled.</description>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>