force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Option__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required and is automatically populated when answering a question in the questionnaire. This field associates the selected answer to the option selected in the questionnaire if the question is a picklist.</description>
    <label>Option</label>
    <referenceTo>nFORCE__Option__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>