force-app/main/default/objects/nFORCE__Answer__c/fields/nFORCE__Question__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is not required and is automatically populated when answering a question in the questionnaire. This field associates the selected answer to the question in the questionnaire.</description>
    <label>Question</label>
    <referenceTo>nFORCE__Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>